# code2020

./: .gitignore  .gitmodules  README.md  template  template.cpp  template_clion.cpp
camps/: README.md
camps/camp2021/day10/: CMakeLists.txt
camps/camp2021/day10/src/: a.cpp  b.cpp  b.in  b_bins.cpp  c.cpp  d.cpp  gen.cpp  stress.sh
camps/camp2021/day2/: CMakeLists.txt  main.cpp
camps/camp2021/day2/src/: a.cpp  b.cpp  b.in  b1.cpp  c.cpp  c_slow.cpp  d.cpp  d1.cpp  e.cpp  gen.cpp  stress.sh
camps/camp2021/day5/: CMakeLists.txt
camps/camp2021/day5/src/: CMakeLists.txt  a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  f.cpp  g.cpp  h.cpp  i.cpp
camps/camp2021/day7/: CMakeLists.txt
camps/camp2021/day7/src/: a.cpp  b.cpp  b_slow.cpp  c.cpp  d.cpp  d_denchik.cpp
camps/camp2021/day9/: CMakeLists.txt
camps/camp2021/day9/src/: a.cpp  b.cpp  b.in  b_slow.cpp  c.cpp  check.cpp  d.cpp  d.in  d1.cpp  gen.cpp  stress.sh
camps/camp2021/roi2019_2/: CMakeLists.txt
camps/camp2021/roi2019_2/src/: a.cpp  a.in  a_slow.cpp  b.cpp  b.in  b_lr.cpp  c.cpp  d.cpp  d1.cpp  gen.cpp  stress.sh
camps/camp2021/treap/: CMakeLists.txt
camps/camp2021/treap/src/: a.cpp  bc.cpp  d.cpp  e.cpp  f.cpp  f.in  f_slow.cpp  g.cpp  gen.cpp  h.cpp  i.cpp  j.cpp  stress.sh
camps/lksh_winter2020/: avl.cpp  robots.cpp
camps/lksh_winter2020/day2/: CMakeLists.txt
camps/lksh_winter2020/day2/src/: a.cpp  a.in  a_slow.cpp  b.cpp  c.cpp  c.in  e.cpp  g.cpp  gen.cpp  stress.sh
camps/lksh_winter2020/day4/: CMakeLists.txt
camps/lksh_winter2020/day4/src/: f.cpp  f.in  f_slow.cpp  gen.cpp  simplex.cpp  simplex_positive.cpp  stress.sh
camps/lksh_winter2020/kek/: CMakeLists.txt
camps/lksh_winter2020/kek/src/: code.cpp  code_inception.cpp  e.cpp  h.cpp  hashset.cpp  i.py  j.py  kek.py  kirk.cpp  l.cpp  l.py  m.py  n.cpp  n.py  o.py  output.txt  p.py  q.py  r.cpp  run.sh  s.py
camps/lksh_winter2020/round/: CMakeLists.txt  anti_budalnik_gen.cpp  anti_budalnik_gen_2.cpp  big_convex_gen.cpp  budalnik_slow.cpp  corners_gen.cpp  cross_gen.cpp  morozov-ushakov_nlogn_cross.cpp  morozov-ushakov_nlogn_intersect.cpp  morozov-ushakov_nlogn_non_intersect.cpp  morozov-ushakov_nlogn_overflow.cpp  random_gen_fixed_n.cpp  random_points_gen.cpp  testlib.h  ushakov_n5.cpp  validator.cpp
camps/team_camp2020/day2/: CMakeLists.txt  c.cpp  check.cpp  d.cpp  f.cpp  g.cpp  gen.cpp  h.cpp  h_slow.cpp  i.cpp  j.cpp  k.py
camps/team_camp2020/day3/: CMakeLists.txt  b.cpp  e.py  f.cpp  f_slow.cpp  gen.cpp  h.cpp  h_slow.cpp  i.cpp  j.cpp  stress.sh
camps/team_camp2020/day4/: CMakeLists.txt  G.cpp  a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  f.cpp  f_slow.cpp  g1.cpp  gen.cpp  i.cpp  j.cpp  k.cpp  stress.sh
camps/team_camp2020/day5/: CMakeLists.txt  b.cpp  f.cpp  gen.cpp  h.cpp  i.cpp  i_slow.cpp  j.cpp  k.cpp  k1.cpp  k_slow.cpp  stress.sh
cf/651_div2/: a.cpp  b.cpp  c.cpp  c1.cpp  d.cpp  e.cpp
cf/652_div2/: a.cpp  b.cpp  c.cpp  d.cpp  e.cpp
cf/654_div2/: d.cpp  e1.cpp
cf/655_div2/: a.cpp  b.cpp  c.cpp  d.cpp
cf/657_div2/: a.cpp  a.py  b.cpp  c.cpp  c_f.cpp  gen.cpp  stress.sh  template.cpp
cf/662_div2/: a.cpp  b.cpp  c.cpp  d.cpp  e1.cpp  e1.dd
cf/663_div2/: a.cpp  b.cpp  c.cpp  d.cpp  d1.cpp  gen.cpp  stress.sh
cf/664_div2/: a.cpp  b.cpp  c.cpp  d.cpp
cf/741_div2/: CMakeLists.txt
cf/educ89_hacks/: 300iq_d.cpp  check.cpp  gen.cpp  stress.sh  zayac_d.cpp
cf/educ90/: a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  e.py  e_mark.cpp  gen.cpp  stress.sh
contests/open2021_final/: CMakeLists.txt
contests/open2021_final/src/: bukhalter.cpp  bukhalter_fast.cpp  bukhalter_upsolve.cpp  champions.cpp  gen.cpp  next_episode.cpp  next_episode_upsolve.cpp  otvinta.cpp  party.cpp  stress.sh  this_gonna_be_hurt.cpp  wind_of_change.cpp  winner.cpp  winner.in  winner_slow.cpp
contests/short_open2020/: CMakeLists.txt
contests/short_open2020/src/: a.cpp  b.cpp  b_slow.cpp  c.cpp  c.in  c_slow.cpp  d.cpp  d.in  d_slow.cpp  gen.cpp  stress.sh
contests/spbkoshp/: CMakeLists.txt  a.cpp  a_slow.cpp  b.cpp  b_slow.cpp  c.cpp  d.cpp  e.cpp  e_slow.cpp  f.cpp  g.cpp  gen.cpp  h.cpp  i.cpp  j.cpp  l.cpp  stress.sh
contests/techocup2021_final/: CMakeLists.txt  a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  f.cpp  gen.cpp  main.cpp  segment_tree.cpp
contests/vkoshp/: CMakeLists.txt
contests/vkoshp/src/: CMakeLists.txt  a.cpp  b.cpp  c.cpp  d.cpp  d_slow.cpp  e.cpp  f.cpp  g.cpp  h.cpp  h_slow.cpp  i.cpp  j.cpp  k.cpp  l.cpp  m.cpp  n.cpp  o.cpp  stress.sh
contests/vkoshp/src/src/: h_slow.cpp
contests/zaoch2021/: CMakeLists.txt
contests/zaoch2021/src/: a.cpp  b2.cpp  c.cpp  c_19.cpp  d.cpp  d_19.cpp  e.cpp  gen.cpp  stress.sh
contests/zaoch2021_1/: CMakeLists.txt
contests/zaoch2021_1/src/: e.cpp  f.cpp  f.in  f1.cpp  g.cpp  gen.cpp  h.cpp  i.cpp  i.in  i1.cpp  j.cpp  stress.sh
itmo/20201019/: CMakeLists.txt  a.cpp  a_slow.cpp  b.cpp  c.cpp  c_slow.cpp  gen.cpp
itmo/20210208/: CMakeLists.txt
itmo/20210208/src/: a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  f.cpp  g.cpp  h.cpp  i.cpp
itmo/20210211/: CMakeLists.txt
itmo/20210211/src/: a.cpp  b.cpp  e.cpp  f.cpp  g.cpp  gen.cpp  h.cpp  h1.cpp  i.cpp  stress.sh
made_contest/: CMakeLists.txt
made_contest/src/: a.cpp  a1.cpp  b.cpp  c.cpp  d.cpp  d.in  d_slow.cpp  e.cpp  f2.cpp  f2.in  gen.cpp  stress.sh
oi-checklist/: bbreads.cpp  bbreads_Stupid.cpp  cbs.cpp  first.cpp  gangs.cpp  gangs1.cpp  gen.cpp  islands.cpp  lineup.cpp  part_stupid.cpp  partititon.cpp  pieeaters.cpp  pieeaters.stupid  pieeaters.stupid.cpp  snowcow.cpp  stress.sh
teambook/: CMakeLists.txt
tinkoff/2020/bits_and_tricks/: CMakeLists.txt
tinkoff/2020/bits_and_tricks/src/: b.cpp  c.cpp  d.cpp  e.cpp  f.cpp  h.cpp
tinkoff/2020/blitz/: CMakeLists.txt
tinkoff/2020/blitz/src/: c.cpp  d.cpp  g.cpp  h.cpp  i.cpp  j.cpp  k.cpp  n.cpp  o.cpp
tinkoff/2020/data_structures/: CMakeLists.txt  a.cpp  b.cpp  b_slow.cpp  c.cpp  d.cpp  e.cpp  gen.cpp  i.cpp  i_slow.cpp  j.cpp  j.dd  k.cpp  n.cpp  n.py  stress.sh
tinkoff/2020/data_structures1/: CMakeLists.txt  e.cpp  e1.cpp  e2.cpp  f.cpp  g.cpp  gen.cpp  l.cpp  l_slow.cpp  stress.sh
(+758 files in other folders)
