cmake_minimum_required(VERSION 3.17)
project(spbkoshp)

set(CMAKE_CXX_STANDARD 17)
add_compile_options(-O0 -g)
add_executable(spbkoshp main.cpp)
add_executable(a a.cpp)

add_executable(e e.cpp)

add_executable(c c.cpp)

add_executable(g g.cpp)

add_executable(f f.cpp)

add_executable(i i.cpp)

add_executable(e_slow e_slow.cpp)

add_executable(b b.cpp)

add_executable(b_slow b_slow.cpp)

add_executable(d d.cpp)

add_executable(a_slow a_slow.cpp)

add_executable(gen gen.cpp)

add_executable(j j.cpp)

add_executable(h h.cpp)

add_executable(l l.cpp)
