cmake_minimum_required(VERSION 3.17)
project(techocup2021_final)

set(CMAKE_CXX_STANDARD 17)

add_compile_definitions(LOCAL)
add_compile_options(-O0 -g3)
add_executable(techocup2021_final main.cpp)
add_executable(gen gen.cpp)
add_executable(a a.cpp)
add_executable(b b.cpp)
add_executable(c c.cpp)
add_executable(d d.cpp)
add_executable(e e.cpp)
add_executable(f f.cpp)
add_executable(segment_tree segment_tree.cpp)