cmake_minimum_required(VERSION 3.17)
project(20201019)

set(CMAKE_CXX_STANDARD 17)

add_executable(20201019 main.cpp)
add_executable(a a.cpp)
add_executable(b b.cpp)
add_executable(c c.cpp)
add_executable(d d.cpp)
add_executable(e e.cpp)
add_executable(f f.cpp)


add_executable(a_slow a_slow.cpp)

add_executable(gen gen.cpp)

add_executable(c_slow c_slow.cpp)
