cmake_minimum_required(VERSION 3.17)
project(day5)

set(CMAKE_CXX_STANDARD 17)
add_compile_options(-O0 -g3)
add_executable(day5 main.cpp)
add_executable(a src/a.cpp)

add_executable(b src/b.cpp)

add_executable(c src/c.cpp)

add_executable(d src/d.cpp)

add_executable(e src/e.cpp)

add_executable(f src/f.cpp)

add_executable(g src/g.cpp)

add_executable(i src/i.cpp)

add_executable(h src/h.cpp)
