cmake_minimum_required(VERSION 3.17)
project(treap)

set(CMAKE_CXX_STANDARD 17)
#add_compile_definitions(_GLIBCXX_DEBUG)
add_compile_options(-O0 -g3)
add_executable(treap main.cpp)
add_executable(a src/a.cpp)
add_executable(bc src/bc.cpp)
add_executable(d src/d.cpp)
add_executable(e src/e.cpp)
add_executable(f src/f.cpp)
add_executable(g src/g.cpp)
add_executable(j src/j.cpp)
add_executable(h src/h.cpp)
add_executable(i src/i.cpp)
add_executable(f_slow src/f_slow.cpp)
add_executable(gen src/gen.cpp)
