cmake_minimum_required(VERSION 3.17)
project(day5)

set(CMAKE_CXX_STANDARD 17)
add_compile_options(-O0 -g3)
add_executable(day5 main.cpp)
add_executable(f f.cpp)

add_executable(i i.cpp)

add_executable(h h.cpp)

add_executable(j j.cpp)

add_executable(i_slow i_slow.cpp)

add_executable(k k.cpp)
add_executable(k1 k1.cpp)


add_executable(b b.cpp)

add_executable(k_slow k_slow.cpp)

add_executable(gen gen.cpp)
