cmake_minimum_required(VERSION 3.17)
project(blitz)

set(CMAKE_CXX_STANDARD 17)

add_executable(blitz main.cpp)
add_executable(d src/d.cpp)

add_executable(j src/j.cpp)

add_executable(h src/h.cpp)

add_executable(g src/g.cpp)

add_executable(k src/k.cpp)

add_executable(i src/i.cpp)

add_executable(o src/o.cpp)

add_executable(c src/c.cpp)

add_executable(n src/n.cpp)
